--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,70 @@
-__pycache__/
-*.pyc
-*.log
-*.tmp
-*.bak
+### OSX ###
 .DS_Store
-*.tar.gz
+.AppleDouble
+.LSOverride
+
+### SublimeText ###
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+# *.sublime-project
+
+# sftp configuration file
+sftp-config.json
+
+# Basics
+*.py[cod]
+__pycache__
+
+# Logs
+logs
+*.log
+pip-log.txt
+npm-debug.log*
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+htmlcov
+
+# Translations
+#*.mo
+*.pot
+
+# Pycharm
+.idea/*
+
+# Vim
+*~
+*.swp
+*.swo
+
+# npm
+node_modules/
+
+# Compass
+.sass-cache
+
+# virtual environments
+.env
+
+# VSCode
+.vscode/
+*.code-workspace
+
+# version information
+RELEASE-VERSION
+\.python-version
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
