--- a/src/pwmfan_config.json
+++ b/src/pwmfan_config.json
@@ -3,7 +3,7 @@
   "pwm_path": "/sys/class/pwm/pwmchip0/pwm0",
   "temp_sensor_path": "/sys/class/thermal/thermal_zone0/temp",
   "interval": 10,
-  "verbose": false,
+  "verbose": true,
   "temperature_to_duty": [
     {"temp": 45, "duty": 0},
     {"temp": 50, "duty": 10},
