chore(refactor): 統一調整所有程式碼之命名原則

--- a/etc/systemd/pwmfan-controller.service
+++ b/etc/systemd/pwmfan-controller.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=PWM Fan Controller Service
-After=multi-user.target
+Requires=pwmfan-setup.service
+After=multi-user.target pwmfan-setup.service
 
 [Service]
 Type=simple
