chore: 更新 pwmfan_setup.ini, 增加註解說明硬體適用範圍

--- a/etc/pwmfan_setup.ini
+++ b/etc/pwmfan_setup.ini
@@ -1,5 +1,10 @@
 # Sample configuration for pwmfan_setup.sh
 # This file should be placed at /etc/pwmfan_setup.ini
+#
+# The default values below are typically suitable for both Raspberry Pi 4 and 5
+# standard PWM fan control setups (GPIO pin controlling pwm0 on pwmchip0).
+# Modify these values only if your hardware setup (e.g., fan connection,
+# specific fan requirements) or operating system configuration differs.
 
 # Path to the PWM chip directory
 # Check your system documentation or use `ls /sys/class/pwm/` to find the correct path
